/*
 * Licensed to the Apache Software Foundation (ASF) under one or more
 * contributor license agreements.  See the NOTICE file distributed with
 * this work for additional information regarding copyright ownership.
 * The ASF licenses this file to You under the Apache License, Version 2.0
 * (the "License"); you may not use this file except in compliance with
 * the License.  You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

option java_multiple_files = true;
package org.apache.airavata.datalake.orchestrator.workflow.engine;

import "google/api/annotations.proto";
import "Common.proto";
import "google/protobuf/empty.proto";

message WorkflowMessage {
    string message_id = 1;
    string resource_id = 2;
    string source_resource_id = 3;
    string destination_resource_id = 4;
    string username = 5;
    string tenantId = 6;
    string source_credential_token = 7;
    string destination_credential_token = 8;
    string auth_token = 9;
}

message WorkflowInvocationRequest {
    WorkflowMessage message = 2;
}

message WorkflowInvocationResponse {
    bool status = 1;
}

message MFTCallbackGetRequest {
    string mftTransferId = 1;
}

message MFTCallbackGetResponse {
    string mftTransferId = 1;
    int32 prevSectionIndex = 2;
    string workflowId = 3;
    string taskId = 4;
}

message MFTCallbacSaveRequest {
    string mftTransferId = 1;
    int32 prevSectionIndex = 2;
    string workflowId = 3;
    string taskId = 4;
}

service WorkflowService {

    rpc invokeWorkflow (WorkflowInvocationRequest) returns (WorkflowInvocationResponse);
    rpc getMFTCallback(MFTCallbackGetRequest) returns (MFTCallbackGetResponse);
    rpc saveMFTCallback(MFTCallbacSaveRequest) returns (google.protobuf.Empty);
}